local/logs/project.log
2018-01-31T15:42:27.125Z - normal: Load ~/.CocosCreator/settings.json
2018-01-31T15:42:27.125Z - normal: checking language setting...
2018-01-31T15:42:27.125Z - normal: Language: en
2018-01-31T15:42:29.063Z - success: protocol editor-framework registered
2018-01-31T15:42:29.063Z - success: protocol app registered
2018-01-31T15:42:29.063Z - success: protocol theme registered
2018-01-31T15:42:29.063Z - success: protocol packages registered
2018-01-31T15:42:29.063Z - success: protocol unpack registerred
2018-01-31T15:42:29.063Z - success: protocol disable-commonjs registerred
2018-01-31T15:42:29.063Z - error: { Error: getaddrinfo ENOENT creator-api.cocos.com:443
    at Object.exports._errnoException (util.js:1050:11)
    at errnoException (dns.js:33:15)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:73:26)
  code: 'ENOENT',
  errno: 'ENOENT',
  syscall: 'getaddrinfo',
  hostname: 'creator-api.cocos.com',
  host: 'creator-api.cocos.com',
  port: 443 }
    at D:\CocosCreator\resources\app.asar\share\login\lib\user.js:1:1441
    at ClientRequest.Https.request.on.e (D:\CocosCreator\resources\app.asar\share\login\lib\network.js:1:873)
    at emitOne (events.js:96:13)
    at ClientRequest.emit (events.js:191:7)
    at TLSSocket.socketErrorListener (_http_client.js:358:9)
    at emitOne (events.js:96:13)
    at TLSSocket.emit (events.js:191:7)
    at connectErrorNT (net.js:1032:8)
    at _combinedTickCallback (internal/process/next_tick.js:80:11)
2018-01-31T15:42:29.078Z - normal: failed to connect login server... skipping login
2018-01-31T15:42:29.078Z - normal: Check project D:\ggj2018
2018-01-31T15:42:29.078Z - normal: Initializing Cocos2d
2018-01-31T15:42:29.313Z - normal: Initializing Asset Database
2018-01-31T15:42:29.344Z - success: protocol uuid registerred
2018-01-31T15:42:29.344Z - success: protocol db registerred
2018-01-31T15:42:29.359Z - success: protocol thumbnail registerred
2018-01-31T15:42:29.359Z - normal: Loading editor/builtin packages
2018-01-31T15:42:29.375Z - success: anysdk loaded
2018-01-31T15:42:29.516Z - success: assets loaded
2018-01-31T15:42:29.516Z - success: builder loaded
2018-01-31T15:42:29.516Z - success: cocos-analytics loaded
2018-01-31T15:42:29.516Z - success: console loaded
2018-01-31T15:42:29.531Z - success: hierarchy loaded
2018-01-31T15:42:29.531Z - success: inspector loaded
2018-01-31T15:42:29.531Z - success: keystore loaded
2018-01-31T15:42:29.531Z - success: node-library loaded
2018-01-31T15:42:29.531Z - success: package-asset loaded
2018-01-31T15:42:29.531Z - success: preferences loaded
2018-01-31T15:42:29.547Z - success: project-exporter loaded
2018-01-31T15:42:29.563Z - success: project-importer loaded
2018-01-31T15:42:29.563Z - success: project-settings loaded
2018-01-31T15:42:29.563Z - success: ui-kit loaded
2018-01-31T15:42:29.578Z - success: ui-grid loaded
2018-01-31T15:42:29.578Z - success: scene loaded
2018-01-31T15:42:29.578Z - success: sprite-editor loaded
2018-01-31T15:42:29.578Z - success: store loaded
2018-01-31T15:42:29.578Z - success: timeline loaded
2018-01-31T15:42:29.578Z - normal: Loading builtin packages
2018-01-31T15:42:29.594Z - success: asset-db-debugger loaded
2018-01-31T15:42:29.594Z - success: code-editor loaded
2018-01-31T15:42:29.594Z - success: color-picker loaded
2018-01-31T15:42:29.594Z - success: package-manager loaded
2018-01-31T15:42:29.594Z - success: sdkbox loaded
2018-01-31T15:42:29.594Z - success: tester loaded
2018-01-31T15:42:29.594Z - success: ui-kit-preview-extra loaded
2018-01-31T15:42:29.609Z - success: ui-kit-preview loaded
2018-01-31T15:42:29.609Z - success: ui-tree loaded
2018-01-31T15:42:30.844Z - normal: Initializing project D:\ggj2018
2018-01-31T15:42:30.859Z - normal: Loading packages
2018-01-31T15:42:30.859Z - normal: Watching packages
2018-01-31T15:42:30.875Z - normal: Run Application
2018-01-31T15:42:31.631Z - success: preview server running at http://localhost:7456
2018-01-31T15:42:36.978Z - normal: 1.8.1
2018-01-31T15:47:05.330Z - failed: [db-task][sync-changes] Failed to import asset D:\ggj2018\assets\Timer.js, message: Compile error: SyntaxError: D:/ggj2018/assets/Timer.js: Unexpected token (59:16)
  57 | 
  58 |     update (dt) {
> 59 |         if(this..min >= 0 && this..seg >= 0 && this..mili >= 0){
     |                 ^
  60 | 	    	this..tiempo = ((this.TiempoLimiteSegundos *1000 - ((new Date()).getTime() - this.inicio)) / 100);
  61 | 	    	this..tiempo = this..tiempo | 0;
  62 | 	    	this..min = this..tiempo / 1000;
    at Parser.pp$5.raise (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp$3.parseIdentifier (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4332:10)
    at Parser.pp$3.parseSubscripts (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3517:30)
    at Parser.pp$3.parseExprSubscripts (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3504:15)
    at Parser.pp$3.parseMaybeUnary (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
    at Parser.pp$3.parseExpression (D:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3306:19)
2018-01-31T15:49:22.724Z - info: shutdown preview server
